tests/outref/TDF001.ref

-- TDF001 : OCTO345 : DROP FUNCTION works with new function

CREATE FUNCTION DOLLARZWRITE(VARCHAR) RETURNS VARCHAR AS $ZWRITE;
select DOLLARZWRITE(firstname) from names;
DROP FUNCTION DOLLARZWRITE (VARCHAR);
select DOLLARZWRITE(firstname) from names;

"Zero"
"Acid"
"Cereal"
"Lord"
"Joey"
"Zero"
[ERROR] PATH:LINENUM DATE TIME : No function 'DOLLARZWRITE' defined with given parameter types (VARCHAR)
Error with syntax near (line 1, column 8):

select DOLLARZWRITE(firstname) from names;
       ^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select DOLLARZWRITE(firstname) from names;
Remaining function definitions (hashes):
Successfully deleted function "DOLLARZWRITE" from pg_catalog.pg_proc
